[package]
name = "maiden-run"
version = "0.1.0"
authors = ["Greg Wuller <greg@afofo.com>"]
edition = "2018"

[dependencies]
http = "0.2.1"
notify = "4.0.15"
url = "2.1.1"

[dependencies.clap]
version = "2.33.1"
default-features = false
features = ["cargo"]

[dependencies.tungstenite]
version = "0.11.0"
default-features = false  # don't compile with tls support
features = []
